data/reports/.ipynb_checkpoints/slurm-36505740-checkpoint.out
  File "/panfs/ccds02/nobackup/people/kli3/scBERT/data/recount3_preprocessing.py", line 52
    logging.error(traceback.format_exc())
    ^
IndentationError: expected an indented block
JobID        JobIDRaw        JobName  Partition  MaxVMSize  MaxVMSizeNode  MaxVMSizeTask  AveVMSize     MaxRSS MaxRSSNode MaxRSSTask     AveRSS MaxPages MaxPagesNode   MaxPagesTask   AvePages     MinCPU MinCPUNode MinCPUTask     AveCPU   NTasks  AllocCPUS    Elapsed      State ExitCode AveCPUFreq ReqCPUFreqMin ReqCPUFreqMax ReqCPUFreqGov     ReqMem ConsumedEnergy  MaxDiskRead MaxDiskReadNode MaxDiskReadTask    AveDiskRead MaxDiskWrite MaxDiskWriteNode MaxDiskWriteTask   AveDiskWrite    ReqTRES  AllocTRES TRESUsageInAve TRESUsageInMax TRESUsageInMaxNode TRESUsageInMaxTask TRESUsageInMin TRESUsageInMinNode TRESUsageInMinTask TRESUsageInTot TRESUsageOutMax TRESUsageOutMaxNode TRESUsageOutMaxTask TRESUsageOutAve TRESUsageOutTot 
------------ ------------ ---------- ---------- ---------- -------------- -------------- ---------- ---------- ---------- ---------- ---------- -------- ------------ -------------- ---------- ---------- ---------- ---------- ---------- -------- ---------- ---------- ---------- -------- ---------- ------------- ------------- ------------- ---------- -------------- ------------ --------------- --------------- -------------- ------------ ---------------- ---------------- -------------- ---------- ---------- -------------- -------------- ------------------ ------------------ -------------- ------------------ ------------------ -------------- --------------- ------------------- ------------------- --------------- --------------- 
36505740     36505740     fullrecou+    compute                                                                                                                                                                                                              32   00:00:02    RUNNING      0:0                  Unknown       Unknown       Unknown       400G                                                                                                                                          billing=3+ billing=3+                                                                                                                                                                                                                                 
36505740.ba+ 36505740.ba+      batch                                                                                                                                                                                                               1         32   00:00:02    RUNNING      0:0          0             0             0             0                         0                                                                                                                                      cpu=32,me+                                                                                                                                                                                                                                 
